[gd_scene load_steps=17 format=4 uid="uid://hf8cryb4u56d"]

[ext_resource type="PackedScene" uid="uid://b0tny0anub82o" path="res://rooms/template.tscn" id="1_s3fes"]
[ext_resource type="TileSet" uid="uid://f0ypl1ei8ao" path="res://resources/tilesets/ceilings.tres" id="2_dmdvk"]
[ext_resource type="Texture2D" uid="uid://1djpgu8eu0v3" path="res://sprites/door/sprDoorImportant.png" id="2_jotlt"]
[ext_resource type="PackedScene" uid="uid://crbf2p55kyiu" path="res://objects/DoorWire.tscn" id="2_xmxkh"]
[ext_resource type="Script" uid="uid://f4e1rva08fdq" path="res://rooms/door.gd" id="3_8qfir"]
[ext_resource type="TileSet" uid="uid://dj4rnvi15wx87" path="res://resources/tilesets/tiles.tres" id="3_jotlt"]
[ext_resource type="Texture2D" uid="uid://cebm5qmh45n3g" path="res://sprites/door/sprDoorImportantOpenNew.png" id="4_joegh"]
[ext_resource type="Texture2D" uid="uid://de36funajou36" path="res://sprites/door/sprTabletGlyphFactoryEmpty.png" id="5_xmxkh"]
[ext_resource type="Texture2D" uid="uid://b4ve3qxij4f76" path="res://sprites/door/sprTabletGlyphLabEmpty.png" id="6_8qfir"]
[ext_resource type="Texture2D" uid="uid://drgtycoptdn51" path="res://sprites/door/sprTabletGlyphClockEmpty.png" id="6_32bmp"]
[ext_resource type="PackedScene" uid="uid://qg62xhb8whr7" path="res://objects/objSign.tscn" id="7_32bmp"]
[ext_resource type="PackedScene" uid="uid://bp1smyxq0rjkj" path="res://objects/objRoomTransition.tscn" id="11_g0b4y"]
[ext_resource type="PackedScene" uid="uid://diy0ps6ikrp1w" path="res://objects/objInteract.tscn" id="11_txwls"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xmxkh"]
size = Vector2(62, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_joegh"]
size = Vector2(33, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_txwls"]
size = Vector2(48, 20)

[node name="Testroom" instance=ExtResource("1_s3fes")]
area = "Central Facility"
room_name = "The Great Door"
internal_name = "rmRuinEnd"
beep_boop_room = true

[node name="Floor" parent="." index="0"]
tile_map_data = PackedByteArray("AAAAAAAACAAEAAIAAAAAAAEACAAEAAIAAAAAAAIACAAEAAIAAAAAAAMACAAEAAIAAAAAAAQACAAEAAIAAAAAAAUACAAEAAIAAAAAAAYACAAEAAIAAAAAAAcACAAEAAIAAAAAAAgACAAEAAIAAAAAAAkACAAEAAIAAAAAAAoACAAEAAIAAAAAAAsACAAEAAIAAAABAAAACAAEAAIAAAABAAEACAAEAAIAAAABAAIACAAEAAIAAAABAAMACAAEAAIAAAABAAQACAAEAAIAAAABAAUACAAEAAIAAAABAAYACAAEAAIAAAABAAcACAAEAAIAAAABAAgACAAEAAIAAAABAAkACAAEAAIAAAABAAoACAAEAAIAAAABAAsACAAEAAIAAAACAAAACAAEAAIAAAACAAEACAAEAAIAAAACAAIACAAEAAIAAAACAAMACAAEAAIAAAACAAQACAAEAAIAAAACAAUACAAEAAIAAAACAAYACAAEAAIAAAACAAcACAAEAAIAAAACAAgACAAEAAIAAAACAAkACAAEAAIAAAACAAoACAAEAAIAAAACAAsACAAEAAIAAAADAAAACAAEAAIAAAADAAEACAAEAAIAAAADAAIACAAEAAIAAAADAAMACAAEAAIAAAADAAQACAAEAAIAAAADAAUACAAEAAIAAAADAAYACAAEAAIAAAADAAcACAAEAAIAAAADAAgACAAEAAIAAAADAAkACAAEAAIAAAADAAoACAAEAAIAAAADAAsACAAEAAIAAAAEAAAACAAEAAIAAAAEAAEACAAEAAIAAAAEAAIACAAEAAIAAAAEAAMACAAEAAIAAAAEAAQACAAEAAIAAAAEAAUACAAEAAIAAAAEAAYACAAEAAIAAAAEAAcACAAEAAIAAAAEAAgACAAEAAIAAAAEAAkACAAEAAIAAAAEAAoACAAEAAIAAAAEAAsACAAEAAIAAAAFAAAACAAEAAIAAAAFAAEACAAEAAIAAAAFAAIACAAEAAIAAAAFAAMACAAEAAIAAAAFAAQACAAEAAIAAAAFAAUACAAEAAIAAAAFAAYACAAEAAIAAAAFAAcACAAEAAIAAAAFAAgACAAEAAIAAAAFAAkACAAEAAIAAAAFAAoACAAEAAIAAAAFAAsACAAEAAIAAAAGAAAACAAEAAIAAAAGAAEACAAEAAIAAAAGAAIACAAEAAIAAAAGAAMACAAEAAIAAAAGAAQACAAEAAIAAAAGAAUACAAEAAIAAAAGAAYACAAEAAIAAAAGAAcACAAEAAIAAAAGAAgACAAEAAIAAAAGAAkACAAEAAIAAAAGAAoACAAEAAIAAAAGAAsACAAEAAIAAAAHAAAACAAEAAIAAAAHAAEACAAEAAIAAAAHAAIACAAEAAIAAAAHAAMACAAEAAIAAAAHAAQACAAEAAIAAAAHAAUACAAEAAIAAAAHAAYACAAEAAIAAAAHAAcACAAEAAIAAAAHAAgACAAEAAIAAAAHAAkACAAEAAIAAAAHAAoACAAEAAIAAAAHAAsACAAEAAIAAAAIAAAACAAEAAIAAAAIAAEACAAEAAIAAAAIAAIACAAEAAIAAAAIAAMACAAEAAIAAAAIAAQACAAEAAIAAAAIAAUACAAEAAIAAAAIAAYACAAEAAIAAAAIAAcACAAEAAIAAAAIAAgACAAEAAIAAAAIAAkACAAEAAIAAAAIAAoACAAEAAIAAAAIAAsACAAEAAIAAAAJAAAACAAEAAIAAAAJAAEACAAEAAIAAAAJAAIACAAEAAIAAAAJAAMACAAEAAIAAAAJAAQACAAEAAIAAAAJAAUACAAEAAIAAAAJAAYACAAEAAIAAAAJAAcACAAEAAIAAAAJAAgACAAEAAIAAAAJAAkACAAEAAIAAAAJAAoACAAEAAIAAAAJAAsACAAEAAIAAAAKAAAACAAEAAIAAAAKAAEACAAEAAIAAAAKAAIACAAEAAIAAAAKAAMACAAEAAIAAAAKAAQACAAEAAIAAAAKAAUACAAEAAIAAAAKAAYACAAEAAIAAAAKAAcACAAEAAIAAAAKAAgACAAEAAIAAAAKAAkACAAEAAIAAAAKAAoACAAEAAIAAAAKAAsACAAEAAIAAAALAAAACAAEAAIAAAALAAEACAAEAAIAAAALAAIACAAEAAIAAAALAAMACAAEAAIAAAALAAQACAAEAAIAAAALAAUACAAEAAIAAAALAAYACAAEAAIAAAALAAcACAAEAAIAAAALAAgACAAEAAIAAAALAAkACAAEAAIAAAALAAoACAAEAAIAAAALAAsACAAEAAIAAAAMAAAACAAEAAIAAAAMAAEACAAEAAIAAAAMAAIACAAEAAIAAAAMAAMACAAEAAIAAAAMAAQACAAEAAIAAAAMAAUACAAEAAIAAAAMAAYACAAEAAIAAAAMAAcACAAEAAIAAAAMAAgACAAEAAIAAAAMAAkACAAEAAIAAAAMAAoACAAEAAIAAAAMAAsACAAEAAIAAAANAAAACAAEAAIAAAANAAEACAAEAAIAAAANAAIACAAEAAIAAAANAAMACAAEAAIAAAANAAQACAAEAAIAAAANAAUACAAEAAIAAAANAAYACAAEAAIAAAANAAcACAAEAAIAAAANAAgACAAEAAIAAAANAAkACAAEAAIAAAANAAoACAAEAAIAAAANAAsACAAEAAIAAAAOAAAACAAEAAIAAAAOAAEACAAEAAIAAAAOAAIACAAEAAIAAAAOAAMACAAEAAIAAAAOAAQACAAEAAIAAAAOAAUACAAEAAIAAAAOAAYACAAEAAIAAAAOAAcACAAEAAIAAAAOAAgACAAEAAIAAAAOAAkACAAEAAIAAAAOAAoACAAEAAIAAAAOAAsACAAEAAIAAAA=")

[node name="Walls" parent="." index="1"]
tile_map_data = PackedByteArray("AAAMAAQACAAIAAMAAAALAAQACAAHAAMAAAAKAAQACAAHAAMAAAAKAAMACAAHAAIAAAAKAAIACAAHAAIAAAAKAAEACAAHAAEAAAALAAEACAAHAAEAAAALAAIACAAHAAIAAAALAAMACAAHAAIAAAAMAAMACAAIAAIAAAAMAAIACAAIAAIAAAAMAAEACAAIAAEAAAACAAQACAAGAAMAAAADAAQACAAHAAMAAAAEAAQACAAIAAMAAAAEAAMACAAIAAIAAAAEAAIACAAIAAIAAAAEAAEACAAHAAEAAAADAAIACAAHAAIAAAADAAMACAAHAAIAAAADAAEACAAHAAEAAAACAAEACAAGAAEAAAACAAIACAAGAAIAAAACAAMACAAGAAIAAAAHAAQACAAGAAMAAAAHAAMACAAGAAIAAAAHAAIACAAGAAIAAAAHAAEACAAHAAEAAAAIAAEACAAHAAEAAAAJAAIACAAHAAIAAAAJAAMACAAHAAIAAAAJAAQACAAHAAMAAAAIAAQACAAHAAMAAAAIAAMACAAHAAIAAAAIAAIACAAHAAIAAAAJAAEACAAHAAEAAAA=")

[node name="DoorWireLab" parent="." index="3" instance=ExtResource("2_xmxkh")]
self_modulate = Color(0.0666667, 0.105882, 0.87451, 1)
tile_map_data = PackedByteArray("AAARABcAAAAAAAIAAAARABYAAAAAAAAAAAARABUAAAAAAAAAAAARABQAAAAAAAAAAAARABMAAAAAAAAAAAARABIAAAAAAAAAAAARABEAAAAEAAAAAAAQABEAAAABAAAAAAAPABEAAAABAAAAAAAOABEAAAABAAAAAAANABEAAAACAAIAAAANABAAAAAEAAAAAAAMABAAAAABAAAAAAALABAAAAABAAAAAAAKABAAAAABAAAAAAAJABAAAAABAAAAAAAIABAAAAACAAIAAAAIAA8AAAAEAAAAAAAHAA8AAAABAAAAAAAGAA8AAAACAAIAAAAGAA4AAAAAAAAAAAAGAA0AAAAAAAAAAAAGAAwAAAAAAAAAAAAGAAsAAAAAAAAAAAAGAAoAAAACAAAAAAAHAAoAAAAEAAIAAAAHAAkAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAYAAAACAAAAAAAIAAYAAAABAAAAAAAJAAYAAAABAAEAAAA=")

[node name="DoorWireFactory" parent="." index="4" instance=ExtResource("2_xmxkh")]
self_modulate = Color(0, 0.698039, 0, 1)
tile_map_data = PackedByteArray("AAAVABMAAAAAAAAAAAAVABQAAAAAAAAAAAAVABUAAAAAAAAAAAAVABYAAAAAAAAAAAAVABcAAAAAAAIAAAAOAAYAAAABAAIAAAAPAAYAAAABAAAAAAAQAAYAAAABAAAAAAARAAYAAAAEAAAAAAARAAcAAAACAAIAAAASAAcAAAABAAAAAAATAAcAAAABAAAAAAAUAAcAAAABAAAAAAAVAAcAAAAEAAAAAAAVAAgAAAAAAAAAAAAVAAkAAAAAAAAAAAAVAAoAAAAAAAAAAAAVAAsAAAAAAAAAAAAVAAwAAAAEAAIAAAAUAAwAAAABAAAAAAATAAwAAAABAAAAAAASAAwAAAACAAAAAAASAA0AAAAEAAIAAAARAA0AAAACAAAAAAARAA4AAAAAAAAAAAARAA8AAAAAAAAAAAARABAAAAACAAIAAAASABAAAAAEAAAAAAASABEAAAACAAIAAAATABEAAAABAAAAAAAUABEAAAABAAAAAAAVABEAAAAEAAAAAAAVABIAAAAAAAAAAAA=")
mode = "factory"

[node name="DoorWireClock" parent="." index="5" instance=ExtResource("2_xmxkh")]
self_modulate = Color(0.87451, 0.0666667, 0.0666667, 1)
tile_map_data = PackedByteArray("AAAUABMAAAAAAAAAAAAUABQAAAAAAAAAAAAUABUAAAAAAAAAAAAUABYAAAAAAAAAAAAUABcAAAAAAAIAAAAUABIAAAAAAAAAAAAUABEAAAAAAAAAAAAUABAAAAAAAAAAAAAUAA8AAAAAAAAAAAAUAA4AAAAEAAAAAAATAA4AAAABAAAAAAASAA4AAAABAAAAAAARAA4AAAABAAAAAAAQAA4AAAACAAIAAAAQAA0AAAAAAAAAAAAQAAwAAAAAAAAAAAAQAAsAAAAEAAAAAAAPAAsAAAACAAIAAAAPAAoAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAgAAAAEAAAAAAAOAAgAAAABAAIAAAA=")
mode = "clock"

[node name="ObjPlayer" parent="Objects" index="0"]
position = Vector2(228, 248)

[node name="objRoomTransition2" parent="Objects" index="1" instance=ExtResource("11_g0b4y")]
z_index = -1
position = Vector2(144, 45)
rotation = 3.14159
target_room = "uid://ta0ytx7uypx"
direction = 1

[node name="Door" type="Node2D" parent="Objects" index="2"]
position = Vector2(144, 85)
script = ExtResource("3_8qfir")
metadata/_edit_group_ = true

[node name="DoorSprite" type="Sprite2D" parent="Objects/Door" index="0"]
texture = ExtResource("2_jotlt")

[node name="DoorSpriteOpen" type="Sprite2D" parent="Objects/Door" index="1"]
position = Vector2(0, 1)
texture = ExtResource("4_joegh")

[node name="PanelA" type="Sprite2D" parent="Objects/Door" index="2"]
position = Vector2(-14, -5)
texture = ExtResource("6_8qfir")

[node name="PanelB" type="Sprite2D" parent="Objects/Door" index="3"]
position = Vector2(14, -5)
texture = ExtResource("5_xmxkh")

[node name="PanelC" type="Sprite2D" parent="Objects/Door" index="4"]
position = Vector2(0, 15)
texture = ExtResource("6_32bmp")

[node name="StaticBodyClosed" type="StaticBody2D" parent="Objects/Door" index="5"]
position = Vector2(0, 30)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/Door/StaticBodyClosed" index="0"]
shape = SubResource("RectangleShape2D_xmxkh")

[node name="StaticBodyOpen" type="StaticBody2D" parent="Objects/Door" index="6"]
position = Vector2(0, 30)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/Door/StaticBodyOpen" index="0"]
position = Vector2(-40.5, 1.5)
shape = SubResource("RectangleShape2D_joegh")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Objects/Door/StaticBodyOpen" index="1"]
position = Vector2(40.5, 1.5)
shape = SubResource("RectangleShape2D_joegh")

[node name="FakeTilesB" type="TileMapLayer" parent="Objects/Door" index="7"]
z_index = -1
position = Vector2(-144, -85)
tile_map_data = PackedByteArray("AAAFAAEACAAHAAEAAAAGAAEACAAHAAEAAAAFAAIACAAHAAgAAAAGAAIACAAHAAgAAAAEAAIACAAGAAgAAAAHAAIACAAIAAgAAAA=")
tile_set = ExtResource("3_jotlt")
collision_enabled = false

[node name="objInteract" parent="Objects/Door" index="8" instance=ExtResource("11_txwls")]
position = Vector2(0, -33)
node = "big_door"
interact_mode = "use"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/Door/objInteract" index="1"]
position = Vector2(0, 75)
shape = SubResource("RectangleShape2D_txwls")

[node name="objSign" parent="Objects" index="3" instance=ExtResource("7_32bmp")]
position = Vector2(232, 112)
node = "rmRuinEnd"
orientation = 3

[node name="objRoomTransition" parent="TopObjects" index="0" instance=ExtResource("11_g0b4y")]
position = Vector2(228, 272)
target_room = "uid://dy0rcqachu457"
target_x = 180
target_y = 50

[node name="Ceiling" parent="." index="9"]
tile_map_data = PackedByteArray("AAAAAAAACAAAAAEAAAAAAAEACAAAAAIAAAAAAAIACAAAAAIAAAAAAAMACAAAAAIAAAAAAAQACAAAAAIAAAABAAQACAACAAIAAAABAAMACAACAAIAAAABAAIACAACAAIAAAABAAEACAACAAIAAAABAAAACAABAAEAAAAAAAUACAAAAAIAAAAAAAYACAAAAAIAAAAAAAcACAAAAAIAAAAAAAgACAAAAAIAAAAAAAkACAAAAAIAAAABAAkACAACAAIAAAABAAgACAACAAIAAAABAAcACAACAAIAAAABAAYACAACAAIAAAABAAUACAACAAIAAAAAAAoACAAAAAIAAAABAAoACAAAAAUAAAACAAoACAABAAEAAAABAAsACAABAAMAAAACAAsACAABAAMAAAAAAAsACAAAAAMAAAADAAoACAABAAEAAAAEAAoACAABAAEAAAAFAAoACAABAAEAAAAGAAoACAABAAEAAAAHAAoACAACAAEAAAAFAAsACAABAAMAAAAEAAsACAABAAMAAAADAAsACAABAAMAAAAGAAsACAABAAMAAAAHAAsACAACAAMAAAALAAsACAAAAAMAAAALAAoACAAAAAEAAAAMAAoACAABAAEAAAAMAAsACAABAAMAAAANAAsACAABAAMAAAANAAoACAABAAIAAAANAAkACAAAAAIAAAANAAgACAAAAAIAAAAOAAgACAACAAIAAAAOAAYACAACAAIAAAAOAAcACAACAAIAAAAOAAUACAACAAIAAAAOAAQACAACAAIAAAAOAAMACAACAAIAAAAOAAIACAACAAIAAAAOAAEACAACAAIAAAAOAAAACAACAAEAAAANAAAACAABAAEAAAANAAEACAAAAAIAAAANAAIACAAAAAIAAAANAAMACAAAAAIAAAANAAQACAAAAAIAAAANAAUACAAAAAIAAAANAAYACAAAAAIAAAANAAcACAAAAAIAAAAOAAsACAACAAMAAAAOAAoACAACAAIAAAAOAAkACAACAAIAAAAMAAAACAACAAUAAAALAAAACAACAAUAAAAKAAAACAACAAUAAAAJAAAACAACAAUAAAAIAAAACAACAAUAAAAHAAAACAACAAUAAAAEAAAACAACAAUAAAADAAAACAACAAUAAAACAAAACAACAAUAAAA=")

[node name="Camera" parent="." index="10"]
position = Vector2(228, 248)

[node name="FakeTilesA" type="TileMapLayer" parent="." index="12"]
tile_map_data = PackedByteArray("AAAFAAAACAABAAMAAAAGAAAACAABAAMAAAA=")
tile_set = ExtResource("2_dmdvk")
collision_enabled = false
